--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dnspython==2.2.1
 dominate==2.7.0
 email-validator==1.3.0
 Flask==2.2.2
+Flask-Bootstrap==3.3.7.1
 Flask-CKEditor==0.4.6
 Flask-Gravatar==0.5.0
 Flask-Login==0.6.2
